--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -494,6 +494,63 @@ footer{
   font-size: 13px;
   padding: 10px;  
 }
+
+
+/* -------------------------------------------------------------------------- */
+/* -----------------BRAND---------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------- */
+/* -----------------BANNER---------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+.overlay-dark{
+  background:rgba(0,0,0,0.5);
+  display: block;
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 400px;  
+}
+
+.brand-banner{
+  background-image: url(../img/brand-banner.jpg);
+  background-image: url(../img/brand-banner.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 400px;
+  position: relative;
+  margin-top: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+.banner-title{
+  position: relative;
+  top: 40%;
+}
+
+/* -------------------------------------------------------------------------- */
+/* -----------------FONTS ICONS---------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+.content{
+  display: flex;
+}
+
+.brand-image{
+  width: 50%;
+  height: 350px;
+  display: block;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.brand1{
+  background-image: url(../img/brand-content1.jpg);
+}
+
+
 /* -------------------------------------------------------------------------- */
 /* -----------------FONTS ICONS---------------------------------------------- */
 /* -------------------------------------------------------------------------- */
