--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -3,12 +3,30 @@ body{
   color: #8d8d8d;
 }
 
-h3{
+.title{
+  font-size: 15px;
+}
+
+.subtitle{
   font-size: 12px;
 }
 
 a:hover{
   text-decoration: none;
+}
+
+li{
+  list-style: none;
+}
+
+footer{
+  background: #f8f8f8;
+  padding-top: 20px;
+  margin-top: 40px;
+}
+
+.bakground-gray{
+  background: #f8f8f8;
 }
 
 .monserrbold{
@@ -17,6 +35,14 @@ a:hover{
   font-weight: 600;
 }
 
+hr{
+
+}
+
+.anti-row{
+  margin-right: 0px;
+  margin-left: 0px;
+}
 /* -------------------------------------------------------------------------- */
 /* ----------------------------HEADER NAVBAR--------------------------------- */
 /* -------------------------------------------------------------------------- */
@@ -114,6 +140,7 @@ a:hover{
 
 #search input{
   padding: 0px 10px;
+  font-size: 15px;
 }
 
 #search button{
@@ -122,10 +149,14 @@ a:hover{
   width: 28px;
   position: absolute;
   height: 26px;
-  top: 1;
-  right: 1;
+  top: 0;
+  right: 0;
 }
 
+.dropdown{
+  color: #333333 !important;
+  cursor: pointer;
+}
 .dropdown::after{
   border: solid #8d8d8d;
   border-width: 0 2px 2px 0;
@@ -138,8 +169,8 @@ a:hover{
   left: 2%;
 }
 
-.subnav-menu a:hover{
-  color: #00c8c8;
+.subnav-menu a:hover, .dropdown:hover{
+  color: #00c8c8 !important;
 }
 
 .dropdown:hover::after{
@@ -154,7 +185,8 @@ a:hover{
   box-shadow: 0px 13px 16px -7px rgba(0,0,0,0.75);
   background: #f8f8f8;
   margin-top: 15px;
-  display: none;
+  visibility: hidden;
+  transition: 0.1s 0.1s;
 }
 
 .women-menu-wraper{
@@ -201,9 +233,24 @@ a:hover{
   padding: 10px 0px;
 }
 
-#subnav-women:hover div{
+#subnav-men:hover div, #subnav-women:hover div, #subnav-lookbook:hover div{
   visibility: visible;
-  transition-delay: 0.5s;
+}
+
+#subnav-men:active div, #subnav-women:active div, #subnav-lookbook:active div{
+  visibility: visible;
+}
+
+/* ------------------------------------- */
+.lookbook-menu-wraper{
+  position: absolute;
+  -webkit-box-shadow: 0px 5px 16px -4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 13px 16px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px 13px 16px -7px rgba(0,0,0,0.75);
+  background: #f8f8f8;
+  margin-top: 15px;
+  visibility: hidden;
+  transition: 0.1s 0.1s;
 }
 
 .section-carrousel{
@@ -399,18 +446,20 @@ a:hover{
 }
 
 .item-lookbook-button{
-  font-family: 'Monserrat', sans-serif;
-  text-transform: uppercase;
   border: 1px solid #8d8d8d;
-  padding: 12px 20px 12px 20px;
+  padding: 12px 30px;
   text-align: center;
   color: #8d8d8d;
   font-size: 12px;
   display: inline-block;
+  background: rgb(0, 0, 0, 0);
+  font-family: 'Monserrat-Bold', sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .item-lookbook-button:hover{
-  border: #ffffff solid 1px;
+  border: #00c8c8 solid 1px;
   color: #ffffff;
   text-decoration: none;
   background: #00c8c8;
@@ -430,12 +479,6 @@ a:hover{
 /* -------------------------------------------------------------------------- */
 /* -------------------------footer---------------------------------------------- */
 /* -------------------------------------------------------------------------- */
-
-footer{
-  background: #f8f8f8;
-  padding-top: 20px;
-  margin-top: 40px;
-}
 
 .footer-nav {
   width: 100%;
@@ -582,12 +625,102 @@ footer{
   margin: 0px 10px;
 }
 
-#map{
-    height: 500px;
-  }
 .location-wrap{
   margin-top: 40px;
 }
+
+.locations-text{
+  margin: 0px 20px;
+  padding: 40px 0px;
+}
+
+.locations-text ul{
+  padding: 0px 0px;
+}
+
+.locations-text ul li{
+  margin-top: 10px;
+}
+
+.locations-text ul li i:before{
+  margin-right: 5px;
+}
+
+.location-icons{
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.location-icons i:before {
+  color: #fff;
+  padding: 5px 5px;
+  background: #767679;
+  border-radius: 50px;
+  margin: 0px 5px;
+  font-size: 15px;
+}
+
+.location-icons i:before {
+  color: #fff;
+  padding: 5px 5px;
+  background: #767679;
+  border-radius: 50px;
+  margin: 0px 5px;
+  font-size: 15px;
+}
+
+.location-icons i:hover::before{
+  background:#00c8c8;
+}
+
+/* -------------------------------------------------------------------------- */
+/* -----------------LOOKBOOK---------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+.lookbook-grid{
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 10px;
+}
+
+.simple-item{
+  display: block;
+  flex: 1 0 calc(25% - 10px); /* explanation below */
+  margin: 5px;
+  min-height: 300px;
+  max-height: 50rv;
+  background-color: #f8f8f8;
+  position: relative;
+}
+
+.double-item{
+  display: block;
+  flex: 1 0 calc(50% - 10px); /* explanation below */
+  margin: 5px;
+  min-height: 300px;
+  max-height: 50rv;
+  background-color: #f8f8f8;
+  position: relative;
+}
+
+  .simple-item img, .double-item img{
+    width: 100%;
+  }
+
+  .full{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    padding: 30px 10px;
+  }
+
+  .full p{
+    width: 45%;
+  }
+
 /* -------------------------------------------------------------------------- */
 /* -----------------FONTS ICONS---------------------------------------------- */
 /* -------------------------------------------------------------------------- */
@@ -632,6 +765,7 @@ footer{
   vertical-align: middle;
   font-size: 15px;
 }
+
 
 .icon-calendar-o:before {
   content: "\62";
@@ -684,6 +818,22 @@ footer{
 .icon-info-circle:before {
   content: "\71";
 }
+.icon-location:before {
+  content: "\72";
+}
+.icon-phone:before {
+  content: "\73";
+}
+.icon-link:before {
+  content: "\74";
+}
+.icon-mail:before {
+  content: "\75";
+}
+.icon-clock:before {
+  content: "\76";
+}
+
 
 /* -------------------------------------------------------------------------- */
 /* fuentes locales */
